--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -202,6 +202,7 @@ allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
+allow 173.249.57.253;
 allow 176.118.193.33;
 allow 176.124.221.200;
 allow 176.126.253.190;
@@ -539,6 +540,7 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.229.15;
@@ -896,6 +898,7 @@ allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.130.136.194;
 allow 23.130.136.195;
+allow 23.137.248.100;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
@@ -965,6 +968,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
@@ -1160,6 +1164,7 @@ allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:3b40:fe:3b1::1;
@@ -1190,6 +1195,7 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1606,6 +1612,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
