--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -137,6 +137,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
+deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
@@ -331,6 +332,7 @@ deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
+deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:3b40:fe:3b1::1;
@@ -361,6 +363,7 @@ deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+deny 2a03:6f20:531::254;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
