--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -168,6 +168,7 @@ allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -977,6 +978,7 @@ allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
@@ -1512,7 +1514,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.128.157.46;
 allow 45.129.84.246;
-allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
