--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -146,6 +146,7 @@ set_real_ip_from 2602:fc24:19:eb06::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
