--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -318,6 +318,7 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f9:3a:2748::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:c5cd::1;
 allow 2a01:5e0:36:cf2a::1;
