--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -289,6 +289,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -1230,6 +1231,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:141:2c::1;
 allow 2a05:541:152:4::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
@@ -1512,7 +1514,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.128.157.46;
 allow 45.129.84.246;
-allow 45.129.84.249;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
