--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -124,6 +124,8 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
+allow 2406:da1a:888:d200:3daf:64c9:d771:fbab;
+allow 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 allow 2407:3640:2207:8882::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
