--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -550,6 +550,7 @@ allow 185.40.4.94;
 allow 185.40.4.95;
 allow 185.42.170.203;
 allow 185.56.171.94;
+allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -1060,7 +1061,6 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
-allow 2406:da1a:888:d200:3daf:64c9:d771:fbab;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1461,6 +1461,7 @@ allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
+allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
@@ -1709,7 +1710,6 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:213;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
-allow 3.108.196.136;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
@@ -1734,6 +1734,7 @@ allow 45.128.133.242;
 allow 45.128.157.43;
 allow 45.128.157.46;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
