--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -124,7 +124,6 @@ deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2406:8dc0:6005::97f2:9c02;
-deny 2406:da1a:888:d200:3daf:64c9:d771:fbab;
 deny 2407:3640:2207:8882::1;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -517,6 +516,7 @@ deny 2a06:1700:4:11:7::2;
 deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
+deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
