--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -287,7 +287,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1050,6 +1049,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -1079,6 +1079,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1733,13 +1734,13 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.128.157.43;
-allow 45.128.157.46;
 allow 45.129.84.246;
+allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
+allow 45.137.205.136;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
