--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -286,6 +286,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -508,6 +509,9 @@ allow 185.227.68.78;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
+allow 185.241.208.202;
+allow 185.241.208.204;
+allow 185.241.208.206;
 allow 185.241.208.232;
 allow 185.241.208.243;
 allow 185.241.208.28;
@@ -1386,6 +1390,7 @@ allow 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
+allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
@@ -1724,7 +1729,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.249;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1745,11 +1749,13 @@ allow 45.139.122.177;
 allow 45.139.122.178;
 allow 45.139.122.179;
 allow 45.141.215.110;
+allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
+allow 45.141.215.21;
 allow 45.141.215.40;
 allow 45.141.215.56;
 allow 45.141.215.61;
@@ -1778,6 +1784,7 @@ allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.8.22.207;
+allow 45.83.104.137;
 allow 45.9.148.113;
 allow 45.94.31.180;
 allow 45.94.31.68;
