--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -124,6 +124,7 @@ set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
+set_real_ip_from 13.126.132.195;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.162.249.209;
@@ -286,7 +287,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -696,6 +696,7 @@ set_real_ip_from 199.195.251.148;
 set_real_ip_from 199.195.251.202;
 set_real_ip_from 199.195.251.78;
 set_real_ip_from 199.195.253.124;
+set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.7.140.230;
@@ -1061,6 +1062,8 @@ set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
+set_real_ip_from 2406:da1a:888:d200:3daf:64c9:d771:fbab;
+set_real_ip_from 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
@@ -1098,6 +1101,7 @@ set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
+set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:3f9:116c:94a1:a862:dfec;
@@ -1185,6 +1189,7 @@ set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
+set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
@@ -1705,8 +1710,10 @@ set_real_ip_from 2a12:a800:1:1:194:26:192:161;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:45:138:16:178;
 set_real_ip_from 2a12:a800:2:1:45:138:16:213;
+set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:bec4:11d3:de9f::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
+set_real_ip_from 3.108.196.136;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
@@ -1729,6 +1736,8 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.248;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1751,6 +1760,7 @@ set_real_ip_from 45.139.122.179;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
+set_real_ip_from 45.141.215.116;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
@@ -1772,6 +1782,7 @@ set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.155.76.108;
 set_real_ip_from 45.155.76.226;
+set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
 set_real_ip_from 45.66.35.10;
