--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -554,6 +554,7 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.229.15;
@@ -1405,6 +1406,7 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1734,7 +1736,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
+allow 45.129.84.248;
+allow 45.129.84.249;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
