--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -460,6 +460,7 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
